--- a/ToDoForms/ToDoForms/ToDoForms/NewItem.xaml
+++ b/ToDoForms/ToDoForms/ToDoForms/NewItem.xaml
@@ -16,7 +16,8 @@
         <Entry x:Name="NameEntry" Placeholder="Name Task" Grid.ColumnSpan="2"/>
         <DatePicker Grid.Row="1" x:Name="dateLimitDatePicker" />
         <TimePicker Grid.Row="1" Grid.Column="1" x:Name="hourLimiteTimePicker" />
-        <Button Text="Save" Grid.Row="2" Grid.ColumnSpan="2" Clicked="Button_Clicked" />
+        <Button Text="Save" Grid.Row="2" Grid.Column="0" Clicked="Button_Clicked" />
+        <Button Text="View List" Grid.Row="2" Grid.Column="1" Clicked="Button_ViewLIst"/>
 
     </Grid>
 </ContentPage>
