--- a/ToDoForms/ToDoForms/ToDoForms/MainPage.xaml
+++ b/ToDoForms/ToDoForms/ToDoForms/MainPage.xaml
@@ -4,9 +4,9 @@
              xmlns:local="clr-namespace:ToDoForms"
              x:Class="ToDoForms.MainPage">
     <StackLayout VerticalOptions="Center" Margin="20">
-        <Entry x:Name="userEntry" Placeholder="User Name" />
-        <Entry x:Name="PassEntry" Placeholder="Password" IsPassword="True" />
-        <Button Text="Sign In" Clicked="Button_Clicked" />
+        <Entry x:Name="userEntry" Placeholder="User Name" TextColor="{StaticResource colorText}" />
+        <Entry x:Name="PassEntry" Placeholder="Password" IsPassword="True" TextColor="{StaticResource colorText}" />
+        <Button Text="Sign In" Clicked="Button_Clicked" BackgroundColor="{StaticResource backgroundColor}" />
         <Label x:Name="resultLabel" HorizontalOptions="Center"/>
     </StackLayout>
 </ContentPage>
