--- a/ToDoForms/ToDoForms/ToDoForms/NewItem.xaml
+++ b/ToDoForms/ToDoForms/ToDoForms/NewItem.xaml
@@ -13,19 +13,18 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Entry x:Name="NameEntry" Placeholder="Name Task" Grid.ColumnSpan="2" TextColor="{StaticResource accentColor}"/>
-        <DatePicker Grid.Row="1" x:Name="dateLimitDatePicker" TextColor="{StaticResource accentColor}"/>
-        <TimePicker Grid.Row="1" Grid.Column="1" x:Name="hourLimiteTimePicker" TextColor="{StaticResource accentColor}"/>
-        <Button Text="Save" Grid.Row="2" Grid.Column="0" Clicked="Button_Clicked" BackgroundColor="{StaticResource accentColor}" 
-                TextColor="{StaticResource buttonTextColor}"/>
-        <Button Text="View List" Grid.Row="2" Grid.Column="1" Clicked="Button_ViewLIst" BackgroundColor="{StaticResource accentColor}" 
-                TextColor="{StaticResource buttonTextColor}"/>
-
+        <Label Text="New Task" Style="{StaticResource styleLabel}" Grid.Row="0" Grid.ColumnSpan="2" />
+        <Entry x:Name="NameEntry" Placeholder="Name Task" Grid.Row="1" Grid.ColumnSpan="2" TextColor="{StaticResource accentColor}"/>
+        <DatePicker Grid.Row="2" x:Name="dateLimitDatePicker" TextColor="{StaticResource accentColor}"/>
+        <TimePicker Grid.Row="2" Grid.Column="1" x:Name="hourLimiteTimePicker" TextColor="{StaticResource accentColor}"/>
+        <Button Text="Save" Grid.Row="3" Grid.Column="0" Clicked="Button_Clicked" TextColor="{StaticResource buttonTextColor}"/>
+        <Button Text="View List" Grid.Row="3" Grid.Column="1" Clicked="Button_ViewLIst" TextColor="{StaticResource buttonTextColor}"/>
     </Grid>
 </ContentPage>
